# molex

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  pyproject.toml  xtal-gpu-plan.md  xtal-spec.md  xtal-workflow.md
.github/workflows/: ci.yml  release.yml
benches/: analysis.rs  assembly_clone.rs  codec.rs  parsing.rs
docs/: book.toml  type_diagram.md
docs/book/: 404.html  index.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-04df7296.js  searchindex-056f3aa0.js  searchindex-a3c85a9d.js  toc-27f43c42.js  toc-545e026b.js  toc.html
docs/book/architecture/: data-flow.html  overview.html
docs/book/getting-started/: installation.html  quick-start.html
docs/book/modules/: adapters.html  analysis.html  assembly.html  cif.html  codec.html  entity.html  ffi.html  ops.html  python.html  render.html  secondary-structure.html  types.html
docs/src/: SUMMARY.md  introduction.md
docs/src/architecture/: data-flow.md  overview.md
docs/src/getting-started/: installation.md  quick-start.md
docs/src/modules/: adapters.md  analysis.md  assembly.md  cif.md  codec.md  entity.md  ffi.md  python.md  render.md  secondary-structure.md  types.md  wire.md
examples/: 1AKI-sf.cif  1BYZ-sf.cif  1G6X-sf.cif  2OXY-sf.cif  2OXY.cif  3F7L.cif  3LZT-sf.cif  3LZT.cif  3SGJ.cif  3ZUC.cif  4XDX-sf.cif  4XDX.cif  5YPA-sf.cif  5YPA.cif  6E6O-sf.cif  7KOM.cif  8ZST.cif  9YFR.cif  compare_results.py  cross_validate.py  cross_validate_cctbx.py  dump_intermediates.rs  fc_cross_validate.py  stage_crossval.py  validate_xtal.rs
include/: molex.h  molex.hpp
src/: assembly.rs  assembly_tests.rs  atom_id.rs  bond.rs  element.rs  ffi.rs  lib.rs  python.rs
src/adapters/: dcd.rs  mod.rs  pdb.rs
src/adapters/atomworks/: from_array.rs  mod.rs  to_array.rs
src/adapters/bcif/: codec.rs  decode.rs  hint.rs  mod.rs  refuse.rs
src/adapters/cif/: dom.rs  dom_build.rs  extract.rs  extract_tests.rs  fast.rs  fast_row.rs  hint.rs  mod.rs  parse.rs  refuse.rs
src/adapters/mrc/: mod.rs  tests.rs
src/adapters/pdb/: mod.rs  parse.rs  refuse.rs  tests.rs  write.rs
src/analysis/: aabb.rs  mod.rs
src/analysis/bonds/: covalent.rs  disulfide.rs  hydrogen.rs  mod.rs
src/analysis/ss/: dssp.rs  mod.rs  string.rs
src/analysis/volumetric/: cavity.rs  gaussian.rs  grid.rs  mod.rs  ses.rs
src/c_api/: edit.rs  mod.rs  walk.rs
src/c_api/edit/: read.rs
src/c_api/edit/read/: tests.rs
src/chemistry/: amino_acids.rs  atom_name.rs  mod.rs  nucleotides.rs  variant.rs
src/cif/: mod.rs
src/entity/: mod.rs
src/entity/molecule/: atom.rs  builder.rs  builder_tests.rs  bulk.rs  chain.rs  classify.rs  id.rs  mod.rs  nucleic_acid.rs  polymer.rs  protein.rs  protein_tests.rs  small_molecule.rs  traits.rs
src/entity/molecule/builder/: classify.rs  mod.rs  roundtrip_tests.rs  tests.rs
src/entity/surface/: density.rs  mod.rs
src/ops/: mod.rs
src/ops/codec/: assembly.rs  bridge.rs  deserialize.rs  mod.rs  serialize.rs  tests.rs  types.rs
src/ops/edit/: mod.rs  tests.rs
src/ops/transform/: alignment.rs  extract.rs  mod.rs
src/ops/wire/: delta.rs  delta_tests.rs  deserialize.rs  mod.rs  serialize.rs  tests.rs  variants.rs
src/types/: mod.rs
src/xtal/: bessel.rs  density.rs  fft_cpu.rs  form_factors.rs  map_coefficients.rs  mod.rs  refinement.rs  scaling.rs  scaling_tests.rs  sigma_a.rs  solvent_mask.rs  targets.rs  types.rs
tests/: bcif_integration.rs  bcif_support.rs  cif_integration.rs  pdb_integration.rs
tests/data/cif/: altloc_AB.cif  auth_vs_label_diverges.cif  branched_collapses.cif  designed_protein_noncanonical.cif  dom_dot_in_type_symbol.cif  fast_path_quotes.cif  fast_path_semicolon.cif  formal_charge.cif  modified_amino_acids.cif  modified_nucleotides.cif  multi_block.cif  multi_model_3.cif  with_ins_code.cif
