[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "molex"
version = "0.1.1"
description = "Coordinate format adapters for molecular structure models"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Andreas Petrides" },
]

[tool.maturin]
features = ["pyo3/extension-module", "python"]
bindings = "pyo3"
module-name = "molex"
